definir roles y acciones

--- a/app/views/cargos/index.html.erb
+++ b/app/views/cargos/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
 
-  <%= render 'layouts/nuevo', :msg => "Nuevo cargo", :path=>new_cargo_path ,:x => @cargos%>
+  <%= render 'layouts/nuevo', :msg => "Nuevo cargo", :path=>new_cargo_path ,:x => Cargo%>
 
   <h1>Cargos</h1>
 </div>
