--- a/app/views/conceptos/index.html.erb
+++ b/app/views/conceptos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= render 'layouts/nuevo', :msg => "Nuevo Concepto", :path=>new_concepto_path  ,:x =>@conceptos%>
+  <%= render 'layouts/nuevo', :msg => "Nuevo Concepto", :path=>new_concepto_path  ,:x =>Concepto%>
 
   <h1>Conceptos</h1>
 </div>
