--- a/app/views/conceptospersonales/index.html.erb
+++ b/app/views/conceptospersonales/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <%= render 'layouts/nuevo', :msg => "Nuevo Concepto Personal", :path=>new_conceptopersonal_path,:x=>@conceptospersonales %>
+    <%= render 'layouts/nuevo', :msg => "Nuevo Concepto Personal", :path=>new_conceptopersonal_path,:x=>Conceptopersonal %>
 
     <h1>Conceptos Personales</h1>
 </div>
