--- a/app/views/personas/index.html.erb
+++ b/app/views/personas/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= render 'layouts/nuevo', :msg => "Contratar persona", :path=>new_persona_path ,:x =>@personas %>
+  <%= render 'layouts/nuevo', :msg => "Contratar persona", :path=>new_persona_path ,:x =>Persona %>
 
   <h1>Empleados</h1>
 </div>
