--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -67,11 +67,11 @@
           </ul>
         </li>
         <li>
-          <%= link_to raw("<i class=\"fa fa-money fa-2x\"></i> NÓMINAS"), tipos_path%>
+          <%= link_to raw("<i class=\"fa fa-th-list fa-2x\"></i> NÓMINAS"), tipos_path%>
         </li>
         <li>
           <a href="#">
-            <i class="fa fa-th-list fa-2x"></i>
+            <i class="fa fa-money fa-2x"></i>
             CONCEPTOS<span class="fa arrow"></span>
           </a>
           <ul class="nav nav-second-level">
@@ -90,12 +90,16 @@
         <li >
           <%= link_to raw("<i class=\"fa fa-users fa-2x\"></i> EMPLEADOS"), personas_path%>
         </li>
+        <% if can? :read, Registro %>
         <li>
           <%= link_to raw("<i class=\"fa fa-eye fa-2x\"></i> REGISTROS"), registros_path%>
         </li>
+        <%end%>
+        <% if can? :read, Setting %>
         <li>
           <%= link_to raw("<i class=\"fa fa-cog fa-2x\"></i> CONFIGURACION"), settings_path%>
         </li>
+        <%end%>
         <li>
           <%= link_to raw("<i class=\"fa fa-info-circle fa-2x\"></i> ACERCA DE..."), cargos_path%>
         </li>
