--- a/app/views/dependencias/index.html.erb
+++ b/app/views/dependencias/index.html.erb
@@ -24,7 +24,7 @@
                     <tr>
                         <td><%= dependencia.nombre %></td>
                         <td class="actions">
-                            <%= render 'layouts/actions', :x => dependencia, :y => edit_dependencia_path(dependencia) %>
+                            <%= render 'layouts/actions', :x => Dependencia, :y => edit_dependencia_path(dependencia) %>
                         </td>
                     </tr>
                     <% end %>
