--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -38,11 +38,7 @@
         <%if usuario_signed_in?%>
         <li class="">
           <a href="#">
-
-            <span class="label label-success">
-              <i class="fa fa-dot-circle-o "></i>
-
-              <%=current_usuario.rol.nombre%></span>
+bienvenido
             <span class="pull-right">
               <%=current_usuario.email%></span>
           </a>
