--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -39,7 +39,7 @@
         <td>
 
 
-        <%= render 'layouts/actions', :x => persona, :y => edit_persona_path(persona) %>
+        <%= render 'layouts/actions', :x => Persona, :y => edit_persona_path(persona) %>
         </td>
       </tr>
       <% end %>
