--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -47,7 +47,7 @@
 
                     <td class="actions">
                         <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-                            <%= render 'layouts/actions', :x => tipo, :y => edit_tipo_path(tipo) %>
+                            <%= render 'layouts/actions', :x => Tipo, :y => edit_tipo_path(tipo) %>
                         </tr>
 
                         <% end %>
