--- a/app/views/cargos/_cargo.html.erb
+++ b/app/views/cargos/_cargo.html.erb
@@ -27,7 +27,7 @@
             <%end%></td>
           <td class="actions">
             <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-              <%= render 'layouts/actions', :x => cargo, :y => edit_cargo_path(cargo) %>
+              <%= render 'layouts/actions', :x => Cargo, :y => edit_cargo_path(cargo) %>
 
             </td>
 
