arreglos vistas y elaboracion de pdf bancario

--- a/app/views/conceptospersonales/index.html.erb
+++ b/app/views/conceptospersonales/index.html.erb
@@ -25,7 +25,7 @@
                     <tr>
                         <td><%= conceptopersonal.nombre %></td>
                         <td class='actions'>
-                            <%= render 'layouts/actions', :x => Conceptopersonal, :y => edit_concepto_path(conceptopersonal) %>
+                            <%= render 'layouts/actions', :x => Conceptopersonal, :y => edit_concepto_path(conceptopersonal), :z =>conceptopersonal %>
 
                         </td>
                     </tr>
@@ -62,7 +62,7 @@
                     <tr>
                         <td><%= conceptopersonal.nombre %></td>
                         <td class='actions'>
-                            <%= render 'layouts/actions', :x => Conceptopersonal, :y => edit_concepto_path(conceptopersonal) %>
+                            <%= render 'layouts/actions', :x => Conceptopersonal, :y => edit_concepto_path(conceptopersonal), :z =>conceptopersonal %>
                         </td>
                     </tr>
                     <% end %>
