--- a/app/views/registros/index.html.erb
+++ b/app/views/registros/index.html.erb
@@ -10,11 +10,10 @@
   <div class="col-md-12">
     <ul class="list-group">
       <li class="list-group-item text-muted" contenteditable="false">Leyenda
-        <span class="fa fa-circle" style="color: green;">Creacion
-        </span>
+        <span class="fa fa-circle" style="color: green;">
+          Creacion</span>
         <span class="fa fa-circle" style="color: blue;">
-          Ediciones
-        </span>
+          Ediciones</span>
         <span class="fa fa-circle" style="color: red;">
           Eliminacion</span>
       </li>
