--- a/app/views/conceptos/index.html.erb
+++ b/app/views/conceptos/index.html.erb
@@ -10,7 +10,7 @@
   <%if Concepto.all.where(tipo_de_concepto:0).length>0%>
   <div class="panel-body">
     <div class="table-responsive text-center">
-      <table class="table  table-condensed table-hover table-responsive " style="font-size:	11px;">
+      <table class="table  table-condensed table-hover table-responsive table-bordered ">
         <thead>
           <tr>
             <th class= "actions">Nombre</th>
@@ -29,7 +29,7 @@
             <td><var><%= concepto.formula %></var></td>
             <td><%= $dic["modos_de_pago"].key(concepto.modalidad_de_pago )%></td>
             <td>
-              <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto) %>
+              <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto), :z =>concepto %>
 
           </td>
           </tr>
@@ -51,7 +51,7 @@
     <%if Concepto.all.where(tipo_de_concepto:1).length>0%>
   <div class="panel-body">
     <div class="table-responsive text-center">
-      <table class="table table-hover table-condensed table-responsive" style="font-size:	11px;">
+      <table class="table table-hover table-condensed table-responsive table-bordered">
         <thead>
           <tr>
             <th class= "actions">Nombre</th>
@@ -69,7 +69,7 @@
             <td><%= concepto.nombre %></td>
             <td><var><%= concepto.formula %></var></td>
             <td><%= $dic["modos_de_pago"].key(concepto.modalidad_de_pago )%></td>
-            <td>              <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto) %>
+            <td>              <%= render 'layouts/actions', :x => Concepto, :y => edit_concepto_path(concepto), :z =>concepto %>
 </td>
           </tr>
           <% end %>
