--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -7,201 +7,220 @@
 </div>
 <div class=" col-md-12">
 
+  <ul class="nav nav-pills nav-justified">
+    <% if can? :edit, Setting %>
+    <li role="presentation"><%= link_to 'Editar', edit_persona_path(@persona)%></li>
+    <%end%>
+    <li role="presentation"><%= link_to 'Regresar', personas_path%></li>
+    <li role="presentation">
 
-<ul class="nav nav-pills nav-justified" >
+      <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Recibo
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu" style="width:100%;">
+        <li class="text-center">
+          <div class="btn-group btn-group-md form-inline" role="group" aria-label="...">
+            <%= link_to ' Recibo', persona_path(@persona,format: "pdf")+"?doc=0",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
+            <%= link_to '', persona_path(@persona,format: "pdf")+"?doc=1",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
+            <%= link_to '', enviar_persona_path(@persona)+"?redir=1", method: :post, data: { confirm: 'Esta seguro?' },class: "btn btn-default fa fa-envelope reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Enviar Al correo electronico"%>
+            <%= link_to '', enviar_persona_path(@persona)+"?redir=1", method: :post, data: { confirm: 'Esta seguro?' },class: "btn btn-default fa fa-search","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Ver reportes anteriores"%>
+          </div>
+        </li>
+        <li role="separator" style="margin:4px;"></li>
 
+        <li class="text-center">
+          <div class="btn-group btn-group-md form-inline" role="group" aria-label="...">
+            <%= link_to ' Constancia', persona_path(@persona,format: "pdf")+"?doc=2",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
+            <%= link_to '', persona_path(@persona,format: "pdf")+"?doc=3",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
 
-      <li  role="presentation"><%= link_to 'Editar', edit_persona_path(@persona)%></li>
-      <li role="presentation"><%= link_to 'Regresar', personas_path%></li>
-      <li role="presentation">
+          </div>
+        </li>
 
-        <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Recibo
-          <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-          <li class="text-center">
-          <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-          <%= link_to ' Recibo', persona_path(@persona,format: "pdf")+"?doc=0",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
-          <%= link_to '', persona_path(@persona,format: "pdf")+"?doc=1",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
-          <%= link_to '', enviar_persona_path(@persona)+"?redir=1", method: :post, data: { confirm: 'Esta seguro?' },class: "btn btn-default fa fa-envelope reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Enviar Al correo electronico" %>
+      </ul>
+    </li>
+    <% if can? :edit, Setting %>
+    <li role="presentation">
 
-          </div></li>
-          <li role="separator" class="divider"></li>
-
-          <li class="text-center"><div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-          <%= link_to ' Constancia', persona_path(@persona,format: "pdf")+"?doc=2",class: "btn btn-default fa fa-file-pdf-o reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar reporte de conceptos en el nomina." %>
-          <%= link_to '', persona_path(@persona,format: "pdf")+"?doc=3",class: "btn btn-default fa fa-leaf reportes","data-toggle"=>"tooltip", "data-placement"=>"right", "title"=>"Descargar version Ecologica(ahorro de tinta)" %>
-
-          </div></li>
-
-
-        </ul>
-      </li>
-<li role="presentation">
-
-  <a class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cambiar estado
-    <span class="caret"></span>
-  </a>
-  <ul class="dropdown-menu">
-    <% case @persona.status
+      <a class="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cambiar estado
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu text-center"  style="width:100%;">
+        <% case @persona.status
       when 'activo'
     %>
-    <li><%= link_to 'Suspender', cambiarestado_persona_path(@persona, :estado =>3), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-    <li><%= link_to 'Retirar',  cambiarestado_persona_path(@persona, :estado =>0), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-    <% when 'retirado'%>
+        <li><%= link_to 'Suspender', cambiarestado_persona_path(@persona, :estado =>3), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <li><%= link_to 'Retirar',  cambiarestado_persona_path(@persona, :estado =>0), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <% when 'retirado'%>
 
-    <li><%= link_to 'Reingresar',  cambiarestado_persona_path(@persona, :estado =>2), method: :post, data: { confirm: 'Esta seguro?' } %></li>
-    <% when 'suspendido'%>
-    <li><%= link_to 'Reactivar',  cambiarestado_persona_path(@persona, :estado =>1), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <li><%= link_to 'Reingresar',  cambiarestado_persona_path(@persona, :estado =>2), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <% when 'suspendido'%>
+        <li><%= link_to 'Reactivar',  cambiarestado_persona_path(@persona, :estado =>1), method: :post, data: { confirm: 'Esta seguro?' } %></li>
+        <%end%>
+
+      </ul>
+    </li>
     <%end%>
-
   </ul>
-</li>
-
-</ul>
 </div>
-<p class="col-md-12">
-
-</p>
+<p class="col-md-12"></p>
 <div class="col-sm-4">
-<!--left col-->
-<ul class="list-group">
-  <li class="list-group-item text-muted" contenteditable="false">Perfil</li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">status</strong>
-    </span>
-    <%= @persona.status.capitalize %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Departamento</strong>
-    </span>
-    <%= @persona.cargo.departamento.nombre.capitalize %></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Cargo</strong>
-    </span>
-    <%= @persona.cargo.nombre.capitalize%></li>
-  <li class="list-group-item text-right">
-    <span class="pull-left">
-      <strong class="">Sueldo Normal</strong>
-    </span>
-    <%= @persona.cargo.sueldos.last.monto%></li>
+  <!--left col-->
+  <ul class="list-group">
+    <li class="list-group-item text-muted" contenteditable="false">Perfil</li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">status</strong>
+      </span>
+      <%= @persona.status.capitalize %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Departamento</strong>
+      </span>
+      <%= @persona.cargo.departamento.nombre.capitalize %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Cargo</strong>
+      </span>
+      <%= @persona.cargo.nombre.capitalize%></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Sueldo Normal</strong>
+      </span>
+      <%= @persona.cargo.sueldos.last.monto%></li>
     <li class="list-group-item text-right">
       <span class="pull-left">
         <strong class="">Sueldo Integral</strong>
       </span>
       <%= @persona.cargo.sueldos.last.sueldo_integral%></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Cédula</strong>
+      </span>
+      <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
+    <li class="list-group-item text-right">
+      <span class="pull-left">
+        <strong class="">Teléfonos</strong>
+      </span><%= @persona.telefono_fijo %><br>
+      <%= @persona.telefono_movil %></li>
+  </li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Cédula</strong>
+      <strong class="">Correo</strong>
     </span>
-    <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
+    <%= @persona.correo %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Teléfonos</strong>
-    </span><%= @persona.telefono_fijo %><br>
-    <%= @persona.telefono_movil %></li>
-</li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Correo</strong>
-  </span>
-  <%= @persona.correo %></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Cuenta</strong>
-  </span>
-  <%= @persona.cuenta %></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Fecha de nacimiento</strong>
-  </span>
-  <%= @persona.fecha_de_nacimiento %></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Direccion</strong>
-  </span><%= @persona.direccion.capitalize %></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Sexo</strong>
-  </span><%= $dic["sexos"].key(@persona.sexo) %></li>
-<li class="list-group-item text-muted" contenteditable="false">Contrato</li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Tipo</strong>
-  </span>
-  <%= $dic["tipos_de_contrato"].key(@persona.contrato.tipo_de_contrato)%></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Fecha de Inicio</strong>
-  </span>
-  <%= @persona.contrato.fecha_inicio%></li>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Años de servicio</strong>
-  </span>
-  <%= distance_of_time_in_words_hash(@persona.contrato.fecha_inicio,Time.now)[:years]%></li>
-<% if @persona.contrato.tipo_de_contrato == 1%>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Fecha de fin</strong>
-  </span>
-  <%= @persona.contrato.fecha_fin%></li>
-<%elsif @persona.contrato.tipo_de_contrato == 2%>
-<li class="list-group-item text-right">
-  <span class="pull-left">
-    <strong class="">Sueldo Externo</strong>
-  </span>
-  <%= @persona.contrato.sueldo_externo%></li>
-<%end%>
+      <strong class="">Cuenta</strong>
+    </span>
+    <%= @persona.cuenta %></li>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Fecha de nacimiento</strong>
+    </span>
+    <%= @persona.fecha_de_nacimiento %></li>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Direccion</strong>
+    </span><%= @persona.direccion.capitalize %></li>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Sexo</strong>
+    </span><%= $dic["sexos"].key(@persona.sexo) %></li>
+  <li class="list-group-item text-muted" contenteditable="false">Contrato</li>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Tipo</strong>
+    </span>
+    <%= $dic["tipos_de_contrato"].key(@persona.contrato.tipo_de_contrato)%></li>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Fecha de Inicio</strong>
+    </span>
+    <%= @persona.contrato.fecha_inicio%></li>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Años de servicio</strong>
+    </span>
+    <%= distance_of_time_in_words_hash(@persona.contrato.fecha_inicio,Time.now)[:years]%></li>
+  <% if @persona.contrato.tipo_de_contrato == 1%>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Fecha de fin</strong>
+    </span>
+    <%= @persona.contrato.fecha_fin%></li>
+  <%elsif @persona.contrato.tipo_de_contrato == 2%>
+  <li class="list-group-item text-right">
+    <span class="pull-left">
+      <strong class="">Sueldo Externo</strong>
+    </span>
+    <%= @persona.contrato.sueldo_externo%></li>
+  <%end%>
 </ul>
 </div>
 
 <div class="col-sm-8">
-  <ul class="list-group">
-    <li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modos_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
-    <li class="list-group-item">
-<table class="table table-hover table-condensed">
-  <thead>
-    <tr>
-      <th>CONCEPTO</th>
-      <th>ASIGNACION</th>
-      <th>DEDUCCION</th>
-      <th>TOTAL</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @persona.asignaciones.each do |c| %>
-    <tr>
-      <td><%= c['nombre'].upcase%></td>
-      <td><%=c['valor']%></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <% end %>
+<ul class="list-group">
+  <li class="list-group-item text-muted" contenteditable="false"><%= 'Reporte '+$dic['modos_de_pago'].key($quincena)+' ('+$ahora.month.to_s+'/'+$ahora.year.to_s+')'%></li>
+  <li class="list-group-item">
+    <table class="table table-hover table-condensed">
+      <thead>
+        <tr>
+          <th>CONCEPTO</th>
+          <th>ASIGNACION</th>
+          <th>DEDUCCION</th>
+          <th>TOTAL</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @persona.asignaciones.each do |c| %>
+        <tr>
+          <td><%= c['nombre'].upcase%></td>
+          <td><%=c['valor']%></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <% end %>
 
-    <% @valor=0
+        <% @valor=0
           @persona.deducciones.each do |c| %>
-    <tr>
-      <td><%= c['nombre'].upcase%></td>
-      <td></td>
-      <td><%=c['valor']%></td>
-      <td></td>
-    </tr>
-    <% end %>
+        <tr>
+          <td><%= c['nombre'].upcase%></td>
+          <td></td>
+          <td><%=c['valor']%></td>
+          <td></td>
+        </tr>
+        <% end %>
 
-    <tr>
-      <th></th>
-      <th><%=
+        <tr>
+          <th></th>
+          <th><%=
             (@persona.total_asignaciones - 0.0005).round(2)%></th>
-      <th><%=
+          <th><%=
               (@persona.total_deducciones - 0.0005).round(2)
             %></th>
-      <th><%= ((@persona.total) - 0.0005).round(2).to_s+"  BsF." %></th>
-    </tr>
-  </tbody>
-</table>
-</li>
+          <th><%= ((@persona.total) - 0.0005).round(2).to_s+"  BsF." %></th>
+        </tr>
+      </tbody>
+    </table>
+  </li>
 </ul>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h4 class="modal-title" id="myModalLabel">Modal title Here</h4>
+    </div>
+    <div class="modal-body">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+      dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-primary">Save changes</button>
+    </div>
+  </div>
+</div>
 </div>
