--- a/app/views/tipos/_form.html.erb
+++ b/app/views/tipos/_form.html.erb
@@ -18,11 +18,16 @@
       </div>
       <% end %>
 
-      <div class="form-group col-md-12">
+      <div class="col-md-12">
         <%= f.label :nombre %><br>
-        <%= f.text_field :nombre, class: "form-control", REQUIRED: "", autofocus: "" %>
+        <div class="form-group input-group">
+          <span class="input-group-addon">
+            <span class="fa fa-align-justify"></span>
+          </span>
+          <%= f.text_field :nombre, class: "form-control", REQUIRED: "", autofocus: "" %>
+        </div>
       </div>
-        <%= render 'layouts/botones', p: tipos_path  %>
+      <%= render 'layouts/botones', p: tipos_path  %>
     </div>
   </div>
 </div>
